--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                     <td>{{musica['album']}}</td>
                     <td>{{musica['reproducoes']}}</td>
                     <td><a href='#' class="btn btn-light">Editar</a></td>
-                    <td><a href="#" class="btn btn-danger">Excluir</a></td>
+                    <td><a href="/delete/{{musica['id']}}" class="btn btn-danger">Excluir</a></td>
                 </tr>
             {% endfor %}
         </table>
