Adicionando confirmação antes de excluir uma música

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,11 +30,12 @@
                     <td>{{musica['album']}}</td>
                     <td>{{musica['reproducoes']}}</td>
                     <td><a href="/edit/{{musica['id']}}" class="btn btn-light">Editar</a></td>
-                    <td><a href="/delete/{{musica['id']}}" class="btn btn-danger">Excluir</a></td>
+                    <td><a href="/delete/{{musica['id']}}" class="btn btn-danger btnConfirmation">Excluir</a></td>
                 </tr>
             {% endfor %}
         </table>
         <a href="/create" class="btn btn-info">Adicionar</a>
     </div>
 </body>
+<script src="/static/js/corfirmation.js"></script>
 </html>
